@@ -141,13 +141,12 @@ sub single : Path('') {
 
     my $mesg = $c->model('Person')->search("uflEduUniversityId=$ufid");
     if (my $entry = $mesg->shift_entry) {
-        $c->stash->{person} = Phonebook::Person->new($entry);
+        $c->stash->{person}   = Phonebook::Person->new($entry);
+        $c->stash->{template} = 'people/show.tt';
 
-        if ($action and $self->can($action)) {
-            $c->forward($action);
-        }
-        else {
-            $c->stash->{template} = 'people/show.tt';
+        if ($action) {
+            $c->detach('default') unless $self->can($action);
+            $c->detach($action);
         }
     }
     else {
